# MacIcecast

./: CMakeLists.txt  Info.plist.in  Packaging Example.command  README.md  main.mm
Resources/: com.icecast.daemon.plist  com.macicecast.daemon.plist
libs/client/: client.cpp  client.hpp  decodeutils.hpp
libs/encoder/: CMakeLists.txt  aacencoder.hpp  mpegencoder.hpp
libs/microphone/: CMakeLists.txt  microphone.hpp  microphone.mm
libs/mslogger/: mslogger.cpp  mslogger.hpp
